fix(CanvasForm): Scrollbar overlapping controls
Currently, the `CanvasForm` component shows its scrollbars on top of the
form controls, effectively blocking adding or removing elements from an
Array.

The fix is to:
1. Make the `<Card>` component take the entire height available without
   scroll
2. Make the `CanvasForm` body to have `scroll: auto`, this way, the
   scroll bar will be drawn outside of the container, as opposed as it
   was before, where the form had the scroll

fix: https://github.com/KaotoIO/kaoto-next/issues/847
fix: https://github.com/KaotoIO/kaoto-next/issues/824

--- a/packages/ui/src/components/Visualization/Canvas/CanvasForm.scss
+++ b/packages/ui/src/components/Visualization/Canvas/CanvasForm.scss
@@ -1,3 +1,7 @@
 .canvas-form {
-  overflow: auto;
+  height: 100%;
+
+  &__body {
+    overflow: auto;
+  }
 }
